# manager

./: WORKSPACE
adapter/config/crd/: BUILD
adapter/config/ingress/: BUILD
cmd/: BUILD
cmd/pilot-agent/: BUILD
cmd/pilot-discovery/: BUILD
model/: BUILD
platform/kube/inject/: BUILD
proxy/: BUILD  context.go
proxy/envoy/: BUILD
proxy/envoy/testdata/: cds-ssl-context.json.golden
test/integration/: BUILD
test/mixer/: BUILD.bazel  server.go
test/mixer/cmd/: BUILD.bazel  main.go
test/mixer/wordlist/: BUILD.bazel
test/mock/: BUILD
