load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//test/mixer/wordlist:go_default_library",
        "@io_istio_api//google/rpc:go_default_library",
        "@io_istio_api//mixer/v1:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
