load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
    name = "protos",
    srcs = ["@io_istio_api//mixer/v1:attributes_file"],
    outs = ["wordlist.go"],
    cmd = "cat $(locations @io_istio_api//mixer/v1:attributes_file) | $(location wordlist_process.sh) > $@",
    tools = ["wordlist_process.sh"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "wordlist.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

